# phone-book

./: CMakeLists.txt  README.md  cli.h  main.cpp  phone_book.cpp  phone_book.h
src/: main.cpp  texts.h
src/cli/: cli.h
src/menus/: menus.h  modify_menu.cpp  query_menu.cpp  saveload_menu.cpp
src/phone_book/: phone_book.cpp  phone_book.h
